2011-11-24  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-group.el (gnus-group-highlight): Fix typo.

2011-11-24  Adam W  <adam_w67@yahoo.com>  (tiny change)

	* mail-source.el (mail-source-fetch-maildir): Don't expect the return
	value of `delete-file', that returns nil for a local file but returns t
	for a remote file using ssh.

2011-11-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-horizontal-line): Use "?\s" instead of "? " to
	avoid later breakage.

2011-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-setup-buffer): Decode group name used for
	article buffers' name.

2011-11-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-horizontal-line): Revert infinite loops introduced
	by Paul Eggert's spellfixes two days ago.

2011-11-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-display-inline-fontify): Make the font-lock variables
	buffer-local instead of binding them to avoid warnings.  Also demote
	errors (bug#10063).
	(font-lock-mode-hook): Shut up byte compiler.

2011-11-20  Juanma Barranquero  <lekktu@gmail.com>

	* mm-util.el (mm-charset-after): Fix typo.

2011-11-16  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-sum.el (gnus-summary-make-menu-bar):
	* gnus-uu.el (gnus-uu-decode-postscript)
	(gnus-uu-decode-postscript-and-save):
	* mailcap.el (mailcap-print-command):
	* registry.el (registry-lookup, registry-lookup-breaks-before-lexbind):
	Fix typos.

2011-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-part-wrapper):
	* shr-color.el (shr-color-visible-distance-min)
	(shr-color-relative-to-absolute, set-minimum-interval)
	(shr-color-visible): Fix typos.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-articles-to-read): Change wording in prompt to be
	slightly clearer.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-send-and-exit): Document `arg'.
