@@ -1,3 +1,7 @@
+2011-11-24  Glenn Morris  <rgm@gnu.org>
+
+	* starttls.el: Fix case of "GnuTLS".
+
 2011-11-24  Juanma Barranquero  <lekktu@gmail.com>
 
 	* gnus-group.el (gnus-group-highlight): Fix typo.
